added home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,18 @@
-<h1> this is the home page</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Diamond Price Prediction</title>
+</head>
+<body>
+
+    <h1>Diamond Price Prediction</h1>
+
+    <!-- Prediction Button with Link -->
+    <a href="http://127.0.0.1:5000/predict" target="_blank">
+        <button>Prediction</button>
+    </a>
+
+</body>
+</html>
