added home page with correction

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <h1>Diamond Price Prediction</h1>
 
     <!-- Prediction Button with Link -->
-    <a href="http://127.0.0.1:5000/predict" target="_blank">
+    <a href="https://pbfackdijm.ap-south-1.awsapprunner.com/predict" target="_blank">
         <button>Prediction</button>
     </a>
 
